# chpt4-barista-robot

./: CMakeLists.txt  package.xml
launch/: barista_two_robots.launch.py  barista_urdf.launch.py  barista_xacro.launch.py
robot-chase/: CMakeLists.txt  package.xml
robot_chase/: CMakeLists.txt  package.xml
robot_chase/src/: robot_chase.cpp
rviz/: robot.rviz  robot2.rviz
urdf/: barista_robot_model.urdf
xacro/: barista.urdf.xacro  barista_2.urdf.xacro  barista_robot_model.urdf.xacro  barista_robot_model2.urdf.xacro  cup_holder_tray.xacro  laser_scanner.xacro  standoff.xacro  wheel.xacro
